fixed some layout issues in the page titles with the buttons. Made them all use the same layout configuration

--- a/src/assets/scss/mixins/resp_layout.scss
+++ b/src/assets/scss/mixins/resp_layout.scss
@@ -66,3 +66,72 @@ $xxl-breakpoint: 1880px;
     grid-template-columns: repeat($columns, 1fr);
     gap: $gap;
 }
+
+.page-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
+    justify-content: center;
+    height: 100%;
+    margin: auto;
+    max-width: rem(1400px);
+
+    .header-with-button {
+        grid-column: 1;
+        grid-row: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        h1 {
+            font-size: rem(38px);
+            font-weight: 500;
+            font-family: Domine;
+            padding-block-end: rem(6px);
+            text-align: center;
+        }
+
+        p {
+            font-family: Jakarta;
+            color: #1B2128;
+        }
+
+        .main-button {
+            button {
+                padding: rem(10px);
+                border: rem(1px) solid grey;
+                border-radius: rem(8px);
+
+                &:hover {
+                    background: rgba(212, 212, 212, 0.5);
+                }
+            }
+        }
+
+    }
+}
+
+@include for-narrow-layout {
+    .page-grid {
+        grid-template-columns: rem(20px) 1fr rem(20px);
+        grid-template-rows: auto 1fr;
+        align-items: center;
+
+        .header-with-button {
+            grid-column: 2;
+            flex-direction: row;
+            gap: 0;
+
+            h1 {
+                margin-inline-start: auto;
+            }
+
+            .main-button {
+                margin-inline-start: auto;
+            }
+        }
+
+    }
+}
