--- a/src/assets/scss/pages/FolderIndex.scss
+++ b/src/assets/scss/pages/FolderIndex.scss
@@ -1,50 +1,14 @@
 .folder-index {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
-    justify-content: center;
-    gap: rem(10px);
-    height: 100%;
-    margin: auto;
-    max-width: rem(1400px);
 
-    .folder-title {
+    .edit-folder {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: rem(8px);
-        width: 100%;
-
-        h1 {
-            grid-column: 1;
-            grid-row: 1;
-            font-size: rem(38px);
-            font-weight: 500;
-            font-family: Domine;
-            text-align: center;
-            padding-block-end: rem(6px);
-            margin-inline-start: auto;
-        }
+        gap: rem(6px);
 
         button {
-            img {
-                width: rem(20px);
-                height: auto;
-            }
-        }
-
-        .add-file {
-            margin-inline-start: auto;
-
-            button {
-                padding: rem(10px);
-                border: rem(1px) solid grey;
-                border-radius: rem(8px);
-
-                &:hover {
-                    background: rgba(212, 212, 212, 0.5);
-                }
-            }
+            width: rem(20px);
+            height: rem(20px);
         }
     }
 
@@ -57,12 +21,14 @@
             grid-template-columns: repeat(2, 1fr);
             gap: 0 rem(6px);
             width: 100%;
+            height: fit-content;
 
             .file-info {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: rem(6px);
+                height: fit-content;
 
                 .img-container {
                     position: relative;
@@ -113,80 +79,88 @@
 }
 
 @include for-narrow-layout {
-    .folder-info {
-        display: flex;
-        flex-direction: column;
-        gap: rem(10px);
-        height: 100%;
+    .folder-index {
 
-        .file-info {
+        .edit-folder {
+            margin-inline-start: auto;
+        }
+
+        .folder-info {
+            grid-column: 2;
             display: flex;
-            align-items: center;
-            height: fit-content;
-            gap: rem(16px);
+            flex-direction: column;
+            gap: rem(10px);
+            height: 100%;
 
-            .file-img {
-                height: rem(40px);
-            }
-
-            table {
-                table-layout: fixed;
-                width: 100%;
-                margin-inline: auto;
-                border-collapse: collapse;
-
-                thead {
-                    tr {
-                        border-bottom: rem(1px) solid grey;
-                    }
-                }
-
-                tr {
-
-                    th,
-                    td {
-                        text-align: start;
-                        font-family: Outfit;
-                        white-space: nowrap;
-
-                        &:nth-child(1) {
-                            // width: 100%;
-                            width: 65%;
-                        }
-
-                        &:nth-child(2) {
-                            width: 10%;
-                            // width: rem(120px);
-                        }
-
-                        &:nth-child(3) {
-                            width: 10%;
-                            // width: rem(80px);
-                        }
-
-                        &:nth-child(3) {
-                            width: 10%;
-                            // width: rem(80px);
-                        }
-
-                        &:nth-child(5) {
-                            width: 5%;
-                            // width: rem(200px);
-                        }
-                    }
-                }
-            }
-
-            .file-actions {
-                width: 100%;
+            .file-info {
                 display: flex;
-                justify-content: flex-start;
-                gap: rem(8px);
+                align-items: center;
+                height: fit-content;
+                gap: rem(16px);
 
-                button {
-                    img {
-                        width: rem(30px);
-                        height: auto;
+                .file-img {
+                    height: rem(40px);
+                }
+
+                table {
+                    table-layout: fixed;
+                    width: 100%;
+                    margin-inline: auto;
+                    border-collapse: collapse;
+
+                    thead {
+                        tr {
+                            border-bottom: rem(1px) solid grey;
+                        }
+                    }
+
+                    tr {
+
+                        th,
+                        td {
+                            text-align: start;
+                            font-family: Outfit;
+                            white-space: nowrap;
+
+                            &:nth-child(1) {
+                                // width: 100%;
+                                width: 65%;
+                            }
+
+                            &:nth-child(2) {
+                                width: 10%;
+                                // width: rem(120px);
+                            }
+
+                            &:nth-child(3) {
+                                width: 10%;
+                                // width: rem(80px);
+                            }
+
+                            &:nth-child(3) {
+                                width: 10%;
+                                // width: rem(80px);
+                            }
+
+                            &:nth-child(5) {
+                                width: 5%;
+                                // width: rem(200px);
+                            }
+                        }
+                    }
+                }
+
+                .file-actions {
+                    width: 100%;
+                    display: flex;
+                    justify-content: flex-start;
+                    gap: rem(8px);
+
+                    button {
+                        img {
+                            width: rem(30px);
+                            height: auto;
+                        }
                     }
                 }
             }
