--- a/src/assets/scss/pages/Home.scss
+++ b/src/assets/scss/pages/Home.scss
@@ -1,56 +1,4 @@
 .home {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    margin: auto;
-    max-width: rem(1400px);
-
-    h1 {
-        font-size: rem(38px);
-        font-weight: 500;
-        font-family: Domine;
-        padding-block-end: rem(6px);
-    }
-
-    p {
-        font-family: Jakarta;
-        color: #1B2128;
-    }
-
-    .folder-header {
-        grid-column: 1;
-        grid-row: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: rem(18px);
-        width: 100%;
-
-        .main-title {
-            // margin-inline-start: auto;
-            text-align: center;
-
-            p {
-                font-size: rem(14px);
-            }
-        }
-
-        .add-folder {
-            button {
-                padding: rem(10px);
-                border: rem(1px) solid grey;
-                border-radius: rem(8px);
-
-                &:hover {
-                    background: rgba(212, 212, 212, 0.5);
-                }
-            }
-        }
-    }
 
     .folder-gallery {
         grid-column: 1;
@@ -114,22 +62,6 @@
 
 @include for-narrow-layout {
     .home {
-        grid-template-columns: rem(20px) 1fr rem(20px);
-        grid-template-rows: auto 1fr;
-
-        .folder-header {
-            grid-column: 2;
-            flex-direction: row;
-            gap: 0;
-
-            .main-title {
-                margin-inline-start: auto;
-            }
-
-            .add-folder {
-                margin-inline-start: auto;
-            }
-        }
 
         .folder-gallery {
             grid-column: 2;
